--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The blue-eyed islanders puzzle
+title: The blue-eyed islanders puzzle-unsheng Yin (s4774280), Jiayun Zhang (s3541312), Luca Mueller (s3745503)
 description: '' # write a nice description for your blog
 baseurl: '/cayman-blog' # the subpath of your site, e.g. /blog
 url: 'https://adueck.github.io' # the base hostname & protocol for your site http://www.example.com
