--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The blue-eyed islanders puzzle- Yunsheng Yin (s4774280), Jiayun Zhang (s3541312), Luca Mueller (s3745503)
-description: '' # write a nice description for your blog
+title: The blue-eyed islanders puzzle             
+description: 'Junsheng Yin (s4774280), Jiayun Zhang (s3541312), Luca Mueller (s3745503)' # write a nice description for your blog
 baseurl: '/cayman-blog' # the subpath of your site, e.g. /blog
 url: 'https://adueck.github.io' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
